Fixed an issue on tablet portrait

--- a/src/components/sidebarComponents/sidebar.module.css
+++ b/src/components/sidebarComponents/sidebar.module.css
@@ -1,3 +1,12 @@
+.sidebar{
+   @apply min-w-56 h-full flex flex-col transition-all duration-300 ease-in-out;
+
+   &.minimize{
+       @apply min-w-12
+   }
+}
+
+
 .link_item{
     display: flex;
     align-items: center;
